hphp/hack/test/typecheck/function_pointer/meth_caller_visibility/default/meth_caller_visibility_errors.php.exp
File "meth_caller_visibility_errors.php", line 19, characters 34-38:
You cannot access this method with `meth_caller` (even from the same class hierarchy) (Typing[4431])
  File "meth_caller_visibility_errors.php", line 14, characters 20-22:
  It is declared as `private` here
File "meth_caller_visibility_errors.php", line 7, characters 34-38:
You cannot access this method with `meth_caller` (even from the same class hierarchy) (Typing[4432])
  File "meth_caller_visibility_errors.php", line 12, characters 22-24:
  It is declared as `protected` here
File "meth_caller_visibility_errors.php", line 17, characters 34-39:
You cannot access this method with `meth_caller` (even from the same class hierarchy) (Typing[4432])
  File "meth_caller_visibility_errors.php", line 4, characters 22-25:
  It is declared as `protected` here
File "meth_caller_visibility_errors.php", line 18, characters 34-38:
You cannot access this method with `meth_caller` (even from the same class hierarchy) (Typing[4432])
  File "meth_caller_visibility_errors.php", line 12, characters 22-24:
  It is declared as `protected` here
